--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "textimager-uima-deep-eos"]
 	path = textimager-uima-deep-eos
 	url = https://github.com/texttechnologylab/deep-eos-uima.git
+[submodule "jcore-base"]
+	path = jcore-base
+	url = https://github.com/JULIELab/jcore-base
