--- a/textimager-uima-juilie/pom.xml
+++ b/textimager-uima-juilie/pom.xml
@@ -29,32 +29,39 @@
             <artifactId>textimager-uima-types</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.hucompute.textimager.uima</groupId>
+            <artifactId>jcore-types</artifactId>
+            <version>${project.version}</version>
+        </dependency>-->
         <dependency>
             <groupId>org.hucompute.textimager.uima</groupId>
             <artifactId>textimager-uima-base-annotators</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
-            <artifactId>UIMADatabaseInterface</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>de.julielab</groupId>
             <artifactId>jcore-types</artifactId>
             <version>2.5.0</version>
-        </dependency>
+        </dependency>-->
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.dkpro.core</groupId>
             <artifactId>dkpro-core-languagetool-asl</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hucompute.textimager.uima</groupId>
+            <artifactId>jcore-types</artifactId>
+            <version>0.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
