--- a/textimager-uima-docker/pom.xml
+++ b/textimager-uima-docker/pom.xml
@@ -4,10 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- TODO: integrate in textimager-uima project -->
-    <groupId>org.hucompute.textimager.uima</groupId>
+    <parent>
+        <groupId>org.hucompute.textimager.uima</groupId>
+        <artifactId>textimager-uima</artifactId>
+        <version>0.3.0</version>
+    </parent>
     <artifactId>textimager-uima-docker</artifactId>
-    <version>0.3.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
