--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "textimager-uima-deep-eos"]
 	path = textimager-uima-deep-eos
 	url = https://github.com/texttechnologylab/deep-eos-uima.git
+[submodule "textimager-uima-gervader/src/main/docker/gervader"]
+	path = textimager-uima-gervader/src/main/docker/gervader
+	url = https://github.com/Myyyvothrr/GerVADER
