Added German Bert Sentiment

--- a/pom.xml
+++ b/pom.xml
@@ -125,5 +125,6 @@
 		<module>textimager-uima-biofid-general-gazetteer</module>
 		<module>textimager-uima-steps</module>
 		<module>textimager-uima-gervader</module>
+		<module>textimager-uima-bert-sentiment</module>
     </modules>
 </project>
