add openie package

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,8 @@
 		<module>textimager-uima-steps</module>
 		<module>textimager-uima-gervader</module>
 		<module>textimager-uima-bert-sentiment</module>
-		<module>jcore-base/jcore-types</module>
-		<module>textimager-uima-julie</module>
+		<!-- <module>jcore-base/jcore-types</module>
+		<module>textimager-uima-julie</module> -->
+		<module>textimager-uima-openie</module>
 	</modules>
 </project>
