--- a/textimager-uima-sentiment-base/pom.xml
+++ b/textimager-uima-sentiment-base/pom.xml
@@ -6,22 +6,18 @@
 		<artifactId>textimager-uima</artifactId>
 		<version>0.3.0</version>
 	</parent>
-	<artifactId>textimager-uima-textblob</artifactId>
+	<artifactId>textimager-uima-sentiment-base</artifactId>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
-			<artifactId>textimager-uima-sentiment-base</artifactId>
+			<artifactId>textimager-uima-types</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
-			<artifactId>textimager-uima-util</artifactId>
+			<artifactId>textimager-uima-base-annotators</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.dkpro.core</groupId>
-			<artifactId>dkpro-core-languagetool-asl</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
