--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<dkpro.core.version>1.12.0</dkpro.core.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<ttlab.typesystem.version>1e0f6c526f</ttlab.typesystem.version>
+		<ttlab.typesystem.version>53973180e10f318b81ad3c66003d484fe456600d</ttlab.typesystem.version>
 		<ttlab.utilities.version>1.1.1-uima-2.10.4</ttlab.utilities.version>
 	</properties>
 
@@ -129,5 +129,6 @@
 		<module>jcore-base/jcore-types</module>
 		<module>textimager-uima-julie</module>
 		<module>textimager-uima-sentiment-base</module>
+		<module>textimager-uima-german-emotion-detection</module>
 	</modules>
 </project>
