--- a/pom.xml
+++ b/pom.xml
@@ -101,10 +101,10 @@
 		<module>textimager-uima-HUComputeNER</module>
 		<module>textimager-uima-disambiguation</module>
 		<module>textimager-uima-io-abbyy</module>
-<!--		<module>textimager-uima-deploy</module>-->
-		<!--<module>textimager-uima-heideltime</module>-->
+		<module>textimager-uima-deploy</module>
+		<module>textimager-uima-heideltime</module>
 <!--		<module>textimager-uima-agreement</module>-->
-		<!--<module>textimager-uima-biofid-gazetteer</module>-->
+		<module>textimager-uima-biofid-gazetteer</module>
 <!--		<module>textimager-uima-deep-eos</module>-->
 		<module>textimager-uima-similarity</module>
 		<module>textimager-uima-database</module>
