--- a/textimager-uima-german-emotion-detection/pom.xml
+++ b/textimager-uima-german-emotion-detection/pom.xml
@@ -13,25 +13,29 @@
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
+		<repository>
+			<id>central</id>
+			<name>Maven Plugin Repository</name>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.github.texttechnologylab</groupId>
+			<artifactId>UIMATypeSystem</artifactId>
+			<version>c1123cc224</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.texttechnologylab</groupId>
+			<artifactId>textimager-uima</artifactId>
+			<version>9fde5da9ea</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-types</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hucompute.textimager.uima</groupId>
-			<artifactId>textimager-uima-base-annotators</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.texttechnologylab</groupId>
-			<artifactId>UIMATypeSystem</artifactId>
-			<version>${ttlab.typesystem.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-languagetool-asl</artifactId>
