--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<ttlab.typesystem.version>c1123cc2240be4213bec594eb3de4b9408a3a2c7</ttlab.typesystem.version>
 		<ttlab.utilities.version>1.1.1-uima-2.10.4</ttlab.utilities.version>
-		<
-    .types.version>9df8678666856d87b815e79fe100da26f777fb91</jcore.types.version>
+		<jcore.types.version>9df8678666856d87b815e79fe100da26f777fb91</jcore.types.version>
 	</properties>
 
 	<repositories>
@@ -132,6 +131,6 @@
 		<module>textimager-uima-gervader</module>
 		<module>textimager-uima-german-emotion-detection</module>
 		<module>textimager-uima-polyglot</module>
-  	<module>textimager-uima-openie</module>
+  		<module>textimager-uima-openie</module>
 	</modules>
 </project>
