--- a/textimager-uima-util/pom.xml
+++ b/textimager-uima-util/pom.xml
@@ -59,6 +59,11 @@
             <version>${ttlab.utilities.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.texttechnologylab</groupId>
+            <artifactId>Utilities</artifactId>
+            <version>${ttlab.utilities.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
