--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 <!--		<module>textimager-uima-IXA</module>-->
 <!--		<module>textimager-uima-uaic</module>-->
 		<module>textimager-uima-spacy</module>
+		<module>textimager-uima-spacy-ie</module>
 <!--		<module>textimager-uima-NeuralnetworkNER</module>-->
 <!--		<module>textimager-uima-cltk</module>-->
 		<module>textimager-uima-fasttext</module>
