Sentiment Bert EN fertig

--- a/textimager-uima-bert-sentiment/src/main/docker_en/requirements.txt
+++ b/textimager-uima-bert-sentiment/src/main/docker_en/requirements.txt
@@ -11,18 +11,20 @@ idna==3.2
 joblib==1.0.1
 numpy==1.21.2
 packaging==21.0
+protobuf==3.17.3
 pydantic==1.8.2
 pyparsing==2.4.7
 PyYAML==5.4.1
 regex==2021.8.21
 requests==2.26.0
 sacremoses==0.0.45
+sentencepiece==0.1.96
 six==1.16.0
 starlette==0.14.2
 tokenizers==0.10.3
 torch==1.9.0
 tqdm==4.62.2
-transformers==4.9.2
+transformers==4.5.1
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 uvicorn==0.15.0
