--- a/textimager-uima-spacy-ie/src/main/docker3/dockerfile
+++ b/textimager-uima-spacy-ie/src/main/docker3/dockerfile
@@ -14,9 +14,9 @@ EXPOSE 8000
 #RUN python -m spacy download zh_core_web_sm
 #RUN python -m spacy download da_core_news_sm
 #RUN python -m spacy download nl_core_news_sm
-RUN python -m spacy download en_core_web_sm
+#RUN python -m spacy download en_core_web_sm
 #RUN python -m spacy download fr_core_news_sm
-RUN python -m spacy download de_core_news_sm
+#RUN python -m spacy download de_core_news_sm
 #RUN python -m spacy download el_core_news_sm
 #RUN python -m spacy download it_core_news_sm
 #RUN python -m spacy download ja_core_news_sm
@@ -36,7 +36,7 @@ RUN python -m spacy download de_core_news_sm
 #RUN python -m spacy download nl_core_news_lg
 #RUN python -m spacy download en_core_web_trf
 #RUN python -m spacy download fr_dep_news_trf
-#RUN python -m spacy download de_dep_news_trf
+RUN python -m spacy download de_dep_news_trf
 #RUN python -m spacy download el_core_news_lg
 #RUN python -m spacy download it_core_news_lg
 #RUN python -m spacy download ja_core_news_lg
