Updated TS version

--- a/textimager-uima-tool-test/pom.xml
+++ b/textimager-uima-tool-test/pom.xml
@@ -128,6 +128,12 @@
 			<artifactId>textimager-uima-biofid-gazetteer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.texttechnologylab</groupId>
+			<artifactId>UIMATypeSystem</artifactId>
+			<version>${ttlab.typesystem.version}</version>
+		</dependency>
 		
 		<!-- <dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
