--- a/textimager-uima-io-mediawiki/pom.xml
+++ b/textimager-uima-io-mediawiki/pom.xml
@@ -38,19 +38,19 @@
 			<version>1.0.0-beta7</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.texttechnologylab</groupId>
-			<artifactId>UIMATypeSystem</artifactId>
-			<version>c1123cc224</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.texttechnologylab</groupId>
-			<artifactId>textimager-uima</artifactId>
-			<version>9fde5da9ea</version>
-		</dependency>
-		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-types</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-io</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.texttechnologylab</groupId>
+			<artifactId>UIMATypeSystem</artifactId>
+			<version>${ttlab.typesystem.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.dkpro.core</groupId>
