Change Route in Stanza to \multi (doens't work yet, why?) and seperate Tests for SpaCyMultiTagger3Tests. Cointains up to Greek until now

--- a/textimager-uima-stanza/src/main/docker/dockerfile
+++ b/textimager-uima-stanza/src/main/docker/dockerfile
@@ -8,8 +8,8 @@ RUN pip install -r requirements.txt
 EXPOSE 8000
 
 # preload models
-RUN python -c "import stanza; stanza.download('en')"
-RUN python -c "import stanza; stanza.download('de')"
+#RUN python -c "import stanza; stanza.download('en')"
+#RUN python -c "import stanza; stanza.download('de')"
 
 ENV TEXTIMAGER_STANZA_USE_GPU=False
 
