--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,6 @@
 		<module>textimager-uima-german-emotion-detection</module>
 		<module>textimager-uima-polyglot</module>
   		<module>textimager-uima-openie</module>
-	</modules>
+		<module>textimager-uima-vader2</module>
+    </modules>
 </project>
