--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -222,11 +222,11 @@
 					<artifactId>textimager-uima-biofid-general-gazetteer</artifactId>
 					<version>${project.version}</version>
 				</dependency>
-				<dependency>
-					<groupId>org.hucompute.textimager.uima</groupId>
-					<artifactId>textimager-uima-julie</artifactId>
-					<version>${project.version}</version>
-				</dependency>
+<!--				<dependency>-->
+<!--					<groupId>org.hucompute.textimager.uima</groupId>-->
+<!--					<artifactId>textimager-uima-julie</artifactId>-->
+<!--					<version>${project.version}</version>-->
+<!--				</dependency>-->
 				<dependency>
 					<groupId>org.hucompute.textimager.uima</groupId>
 					<artifactId>textimager-uima-german-emotion-detection</artifactId>
