small modifications in Poms

--- a/textimager-uima-flair-ner/pom.xml
+++ b/textimager-uima-flair-ner/pom.xml
@@ -27,7 +27,7 @@
 			<groupId>com.github.texttechnologylab</groupId>
 			<artifactId>UIMATypeSystem</artifactId>
 			<version>${ttlab.typesystem.version}</version>
-			<scope>compile</scope>
+<!--			<scope>compile</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>com.github.texttechnologylab</groupId>
