--- a/textimager-uima-biofid-gazetteer/pom.xml
+++ b/textimager-uima-biofid-gazetteer/pom.xml
@@ -78,7 +78,7 @@
             <groupId>com.github.texttechnologylab</groupId>
             <artifactId>UIMATypeSystem</artifactId>
             <version>${ttlab.typesystem.version}</version>
-            <scope>compile</scope>
+<!--            <scope>compile</scope>-->
         </dependency>
         <dependency>
             <groupId>com.github.texttechnologylab</groupId>
