--- a/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/lemma-de-hucompute.properties
+++ b/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/lemma-de-hucompute.properties
@@ -6,4 +6,4 @@ version=20170716.1
 language=de
 variant=hucompute
 tool=lemma
-location=/resources/nlp/models/lemmatizer/marmot/de/all-tiger_onlyLemmas-utf8.marmot
+location=classpath:/de/tudarmstadt/ukp/dkpro/core/marmot/lib/lemma-de-hucompute.marmot
