--- a/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/lemma-la-hucompute.properties
+++ b/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/lemma-la-hucompute.properties
@@ -3,7 +3,7 @@
 
 generated=2017/07/16 17\:36
 version=20170716.1
-language=de
+language=la
 variant=hucompute
 tool=lemma
-location=/resources/nlp/models/lemmatizer/marmot/la/cap_all_lemmas.marmot
+location=classpath:/de/tudarmstadt/ukp/dkpro/core/marmot/lib/cap_all_lemmas.marmot
