--- a/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-de-pretrained.properties
+++ b/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-de-pretrained.properties
@@ -6,5 +6,5 @@ version=20170716.1
 language=de
 variant=pretrained
 tool=pos
-location=classpath\:/org/hucompute/textimager/uima/marmot/lib/de.marmot
+location=classpath:/de/tudarmstadt/ukp/dkpro/core/marmot/lib/de.marmot
 pos.tagset=stts
