--- a/textimager-uima-fasttext/pom.xml
+++ b/textimager-uima-fasttext/pom.xml
@@ -7,6 +7,13 @@
 		<version>0.3.0</version>
 	</parent>
 	<artifactId>textimager-uima-fasttext</artifactId>
+	<repositories>
+	<repository>
+		<id>Model_Repo</id>
+		<name>JFrog-Artifactory</name>
+		<url>http://artifactory.texttechnologylab.org/artifactory/Model_Repo/</url>
+	</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.github.vinhkhuc</groupId>
@@ -24,15 +31,33 @@
 			<version>1.12.0</version>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.3.2</version>
-            <scope>compile</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.5.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.praktikum</groupId>
+			<artifactId>de.praktikum.wiki-upstream-lemma-de-default</artifactId>
+			<version>v8</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-io-xmi-asl</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-io-mediawiki</artifactId>
+			<version>0.3.0</version>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.hucompute.textimager.uima</groupId>
+            <artifactId>textimager-uima-marmot</artifactId>
+            <version>0.3.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
