--- a/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-de-hucompute.properties
+++ b/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-de-hucompute.properties
@@ -6,5 +6,5 @@ version=20170716.1
 language=de
 variant=hucompute
 tool=pos
-location=/resources/nlp/models/pos/marmot/de/all-tiger_nolemm_embeddings_lexicon.marmot
+location=classpath:/de/tudarmstadt/ukp/dkpro/core/marmot/lib/all-tiger_nolemm_embeddings_lexicon.marmot
 pos.tagset=stts
