--- a/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-la-hucompute.properties
+++ b/textimager-uima-marmot/src/main/resources/org/hucompute/textimager/uima/marmot/lib/pos-la-hucompute.properties
@@ -3,8 +3,8 @@
 
 generated=2017/07/16 17\:36
 version=20170716.1
-language=de
+language=la
 variant=hucompute
 tool=pos
-location=/resources/nlp/models/pos/marmot/la/cap_all_tags_lexicon_embeddings.marmot
+location=classpath:/de/tudarmstadt/ukp/dkpro/core/marmot/lib/cap_all_tags_lexicon_embeddings.marmot
 pos.tagset=classpath:/org/hucompute/textimager/uima/marmot/lib/pos-la-pretrained.map
