Update dependencies for spacy-ie to fix project build

--- a/textimager-uima-spacy-ie/pom.xml
+++ b/textimager-uima-spacy-ie/pom.xml
@@ -18,5 +18,14 @@
 			<artifactId>textimager-uima-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-geonames-gazetteer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-languagetool-asl</artifactId>
+		</dependency>
     </dependencies>
 </project>
