--- a/textimager-uima-gervader/src/main/docker/dockerfile
+++ b/textimager-uima-gervader/src/main/docker/dockerfile
@@ -11,4 +11,5 @@ EXPOSE 8000
 
 COPY ./gervader_service.py ./gervader_service.py
 
-CMD ["uvicorn", "gervader_service:app", "--host", "0.0.0.0", "--port" ,"8000"]
+ENTRYPOINT ["uvicorn", "gervader_service:app", "--host", "0.0.0.0", "--port" ,"8000"]
+CMD ["--workers", "1"]
