--- a/textimager-uima-spacy/src/main/docker3/dockerfile
+++ b/textimager-uima-spacy/src/main/docker3/dockerfile
@@ -55,4 +55,5 @@ ENV TEXTIMAGER_SPACY_USE_GPU=False
 
 COPY ./spacy3_service.py ./spacy3_service.py
 
-CMD ["uvicorn", "spacy3_service:app", "--host", "0.0.0.0", "--port" ,"8000"]
+ENTRYPOINT ["uvicorn", "spacy3_service:app", "--host", "0.0.0.0", "--port" ,"8000"]
+CMD ["--workers", "1"]
