--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 		<module>textimager-uima-disambiguation</module>
 		<module>textimager-uima-io-abbyy</module>
 		<module>textimager-uima-heideltime</module>
+		<module>textimager-uima-heideltime-biofid</module>
 <!--		<module>textimager-uima-agreement</module>-->
 		<module>textimager-uima-biofid-gazetteer</module>
 <!--		<module>textimager-uima-deep-eos</module>-->
