--- a/textimager-uima-deploy/pom.xml
+++ b/textimager-uima-deploy/pom.xml
@@ -263,11 +263,11 @@
 					<artifactId>textimager-uima-biofid-general-gazetteer</artifactId>
 					<version>${project.version}</version>
 				</dependency>
-				<dependency>
-					<groupId>com.github.myyyvothrr.jcore-base</groupId>
-					<artifactId>jcore-types</artifactId>
-					<version>${jcore.types.version}</version>
-				</dependency>
+                <!--				<dependency>-->
+                <!--					<groupId>com.github.myyyvothrr.jcore-base</groupId>-->
+                <!--					<artifactId>jcore-types</artifactId>-->
+                <!--					<version>${jcore.types.version}</version>-->
+                <!--				</dependency>-->
                 <!--				<dependency>-->
                 <!--					<groupId>org.hucompute.textimager.uima</groupId>-->
                 <!--					<artifactId>textimager-uima-julie</artifactId>-->
