remove julie lab

--- a/textimager-uima-spacy-ie/pom.xml
+++ b/textimager-uima-spacy-ie/pom.xml
@@ -20,6 +20,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-heideltime</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
 			<artifactId>textimager-uima-geonames-gazetteer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
