--- a/textimager-uima-polyglot/pom.xml
+++ b/textimager-uima-polyglot/pom.xml
@@ -3,7 +3,9 @@
   <groupId>TextImager</groupId>
   <artifactId>Polyglot</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
+
+
+	<dependencies>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
   		<artifactId>
@@ -48,13 +50,21 @@
   </dependencies>
   <build>
 	    <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 	        <plugin>
 	            <artifactId>maven-assembly-plugin</artifactId>
-	            <version>2.6</version>        
+				<version>2.6</version>
 	            <executions>
 	                <execution>
 	            <phase>package</phase>
-	            <goals>  
+						<goals>
 	                        <goal>single</goal>
 	                    </goals>
 	            </execution>
