Local pipeline test

--- a/pom.xml
+++ b/pom.xml
@@ -141,5 +141,6 @@
 		<module>textimager-uima-gnfinder</module>
 		<module>textimager-uima-supar</module>
 		<module>textimager-uima-splitter</module>
+		<module>textimager-uima-local</module>
 	</modules>
 </project>
