--- a/textimager-uima-fasttext/pom.xml
+++ b/textimager-uima-fasttext/pom.xml
@@ -19,6 +19,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hucompute.textimager.uima</groupId>
+			<artifactId>textimager-uima-base-annotators</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-languagetool-asl</artifactId>
 			<version>1.12.0</version>
@@ -33,6 +38,11 @@
 		<dependency>
 			<groupId>org.dkpro.core</groupId>
 			<artifactId>dkpro-core-io-xmi-asl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-corenlp-gpl</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
