--- a/textimager-uima-spacy/pom.xml
+++ b/textimager-uima-spacy/pom.xml
@@ -24,7 +24,8 @@
             <artifactId>dkpro-core-tokit-asl</artifactId>
             <version>2.2.0</version>
         </dependency>
-        <dependency>
+
+		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
@@ -35,5 +36,10 @@
             <version>2.8.0</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.languagetool</groupId>
+			<artifactId>language-all</artifactId>
+			<version>5.4</version>
+		</dependency>
+	</dependencies>
 </project>
