--- a/textimager-uima-namedetecter/.gitignore
+++ b/textimager-uima-namedetecter/.gitignore
@@ -2,3 +2,4 @@ src/main/docker/geonames.txt
 src/main/docker/personennamen.csv_json.gz
 src/main/docker/Toponymelist.csv_json.gz
 src/main/docker/Organization_names.json
+src/main/docker/Organization_labels.json
