--- a/textimager-uima-namedetecter/.gitignore
+++ b/textimager-uima-namedetecter/.gitignore
@@ -3,3 +3,4 @@ src/main/docker/personennamen.csv_json.gz
 src/main/docker/Toponymelist.csv_json.gz
 src/main/docker/Organization_names.json
 src/main/docker/Organization_labels.json
+src/main/docker/Person_names.json
