--- a/textimager-uima-namedetecter/src/main/docker/dockerfile
+++ b/textimager-uima-namedetecter/src/main/docker/dockerfile
@@ -16,6 +16,7 @@ COPY ./geonames.txt /data/geonames.txt
 COPY ./Toponymelist.csv_json.gz /data/Toponymelist.csv_json.gz
 COPY ./Organization_names.json /data/Organization_names.json
 COPY ./Organization_labels.json /data/Organization_labels.json
+COPY ./Person_names.json /data/Person_names.json
 COPY ./Name_detector.py ./Name_detector.py
 
 
