--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 <!--		<module>textimager-uima-fasttext</module>-->
 <!--		<module>textimager-uima-tagme</module>-->
 <!--		<module>textimager-uima-HUComputeNER</module>-->
-<!--		<module>textimager-uima-disambiguation</module>
+<!--		<module>textimager-uima-disambiguation</module>-->
 <!--		<module>textimager-uima-io-abbyy</module>-->
 		<module>textimager-uima-heideltime</module>
 		<module>textimager-uima-heideltime-biofid</module>
